<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="app_name">Vendor Locator</string>
    <string name="app_logo">Vendor Locator</string>
    <string name="shortcut_start">Iniciar servicio</string>
    <string name="shortcut_stop">Detener servicio</string>
    <string name="shortcut_sos">Enviar SOS</string>
    <string name="channel_default">Canal primario</string>
    <string name="settings_id_title">Identificador de dispositivo</string>
    <string name="settings_url_title">URL del servidor</string>
    <string name="settings_url_summary">URL del servidor de seguimiento</string>
    <string name="settings_interval_title">Frecuencia de rastreo</string>
    <string name="settings_interval_summary">Intervalo para reportes en segundos</string>
    <string name="settings_distance_title">Distancia</string>
    <string name="settings_distance_summary">Distancia para reportes en metros</string>
    <string name="settings_angle_title">Ángulo</string>
    <string name="settings_angle_summary">Ángulo para reportes en grados</string>
    <string name="settings_status_title">Estado del servicio</string>
    <string name="settings_status_off">Activado</string>
    <string name="settings_status_on">Desactivado</string>
    <string name="settings_status_off_summary">Servicio detenido</string>
    <string name="settings_status_on_summary">Servicio en ejecución</string>
    <string name="settings_buffer">Offline buffering</string>
    <string name="settings_buffer_off_summary">Buffering off</string>
    <string name="settings_buffer_on_summary">Buffering on</string>
    <string name="settings_wakelock">Wake lock</string>
    <string name="settings_wakelock_off_summary">Wake lock off</string>
    <string name="settings_wakelock_on_summary">Wake lock on</string>
    <string name="settings_accuracy_title">Precisión</string>
    <string name="settings_accuracy_summary">Precisión deseada</string>
    <string name="settings_accuracy_high">Alto</string>
    <string name="settings_accuracy_medium">Medio</string>
    <string name="settings_accuracy_low">Bajo</string>
    <string name="settings_foreground_title">Servicio en primer plano</string>
    <string name="settings_foreground_summary">Aumentar prioridad del servicio</string>
    <string name="menu_status">Estado</string>
    <string name="menu_shortcuts">Añadir acceso directo</string>
    <string name="menu_clear">Limpiar</string>
    <string name="status_service_create">Servicio iniciado</string>
    <string name="status_service_destroy">Servicio detenido</string>
    <string name="status_send_success">Enviado correctamente</string>
    <string name="status_send_fail">Falló el envío</string>
    <string name="status_location_update">Actualización de localización</string>
    <string name="status_network_online">Red en línea</string>
    <string name="status_network_offline">Red fuera de línea</string>
    <string name="hidden_app_name">Ajustes del dispositivo</string>
    <string name="hidden_alert">La aplicación se ha ocultado. Para abrirla de nuevo por favor marque 8722227 (TRACCAR).</string>
    <string name="error_msg_invalid_url">Por favor. Introduzca una URL válida http:// ó https:// </string>
</resources>
