<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title"
        android:enabled="false" />

    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title"
        android:enabled="false" />

    <EditTextPreference
        android:defaultValue="@string/settings_url_default_value"
        android:key="url"
        android:summary="@string/settings_url_summary"
        android:title="@string/settings_url_title"
        android:enabled="false" />

    <EditTextPreference
        android:defaultValue="medium"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        android:title="@string/settings_accuracy_title"
        android:enabled="false" />

    <EditTextPreference
        android:defaultValue="300"
        android:key="interval"
        android:inputType="number"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title"
        android:enabled="false" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="distance"
        android:inputType="number"
        android:summary="@string/settings_distance_summary"
        android:title="@string/settings_distance_title"
        android:enabled="false" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="angle"
        android:inputType="number"
        android:summary="@string/settings_angle_summary"
        android:title="@string/settings_angle_title"
        android:enabled="false" />
</PreferenceScreen>